--- a/FileManager/res/values/strings.xml
+++ b/FileManager/res/values/strings.xml
@@ -176,7 +176,7 @@
     <string name="item_icon">Item icon</string>
 
     <!-- list layout -->
-    <string name="scanning">Scanning&#8230;</string>
+    <string name="file_scanning">Scanning&#8230;</string>
 
     <!-- Dialogs -->
     <string name="delete_success">Successfully deleted</string>
