--- a/FileManager/res/values-zh-rCN/strings.xml
+++ b/FileManager/res/values-zh-rCN/strings.xml
@@ -143,14 +143,14 @@
     <!-- new menu strings -->
     <string name="menu_bookmarks">书签</string>
     <string name="menu_search">Search</string>
-    <string name="menu_create_folder">Create folder</string>
-    <string name="menu_paste">Paste</string>
-    <string name="menu_multiselect">Multiselect</string>
+    <string name="menu_create_folder">创建文件夹</string>
+    <string name="menu_paste">粘贴</string>
+    <string name="menu_multiselect">多选</string>
     <string name="menu_settings">设置</string>
     
     <string name="menu_send">发送</string>
     <string name="menu_delete">删除</string>
-    <string name="menu_move">Cut</string>
+    <string name="menu_move">剪切</string>
     <string name="menu_copy">复制</string>
     <string name="menu_compress">Compress</string>
     <string name="menu_rename">重命名</string>
