--- a/FileManager/res/values-zh-rCN/strings.xml
+++ b/FileManager/res/values-zh-rCN/strings.xml
@@ -137,47 +137,47 @@
     <string name="compressing_error">无法压缩该项目</string>
     <string name="extracting_success">项目解压成功</string>
     <string name="extracting_error">无法解压该项目</string>
-    <string name="extracting">Extracting…</string>
-    <string name="compressing">Compressing…</string>
+    <string name="extracting">正在解压…</string>
+    <string name="compressing">正在压缩…</string>
     
     <!-- new menu strings -->
     <string name="menu_bookmarks">书签</string>
-    <string name="menu_search">Search</string>
-    <string name="menu_create_folder">创建文件夹</string>
+    <string name="menu_search">搜索</string>
+    <string name="menu_create_folder">创建新文件</string>
     <string name="menu_paste">粘贴</string>
     <string name="menu_multiselect">多选</string>
     <string name="menu_settings">设置</string>
     
     <string name="menu_send">发送</string>
     <string name="menu_delete">删除</string>
-    <string name="menu_move">剪切</string>
+    <string name="menu_move">Cut</string>
     <string name="menu_copy">复制</string>
     <string name="menu_compress">Compress</string>
     <string name="menu_rename">重命名</string>
     
-    <string name="menu_extract">Extract</string>
+    <string name="menu_extract">解压</string>
     <string name="menu_details">详细信息</string>
-    <string name="menu_create_shortcut">Create shortcut</string>
-    <string name="send_chooser_title">Send using:</string>
+    <string name="menu_create_shortcut">创建快捷方式</string>
+    <string name="send_chooser_title">选择使用:</string>
     
-    <string name="menu_check_all">Check all</string>
-    <string name="menu_uncheck_all">Uncheck all</string>
+    <string name="menu_check_all">全选</string>
+    <string name="menu_uncheck_all">全部不选</string>
     
     <!-- Multi selection action strings -->
-    <string name="selected">selected</string>
-    <string name="no_selection">No items checked</string>
+    <string name="selected">已选中</string>
+    <string name="no_selection">没有选中项</string>
     
-    <string name="bookmark_empty">No bookmarks added.</string>
+    <string name="bookmark_empty">没有添加的书签</string>
     <string name="bookmark_added">书签已添加</string>
     <string name="bookmark_already_exists">该文件已添加过书签。</string>
     <string name="bookmarks">书签</string>
     
     <!-- Search related -->
-    <string name="search_hint">Search files</string>
-    <string name="query_error">Query error</string>
+    <string name="search_hint">搜索文件</string>
+    <string name="query_error">请求错误</string>
     <string name="search_settings_descr">Files and folders in storage</string>
-    <string name="preference_search_title">Clear history</string>
-    <string name="preference_search_category">Search</string>
+    <string name="preference_search_title">清除历史记录</string>
+    <string name="preference_search_category">搜索</string>
     <string name="preference_search_dialog_message">Clear search history?</string>
     <string name="search_history_cleared">Search history cleared</string>
     
@@ -185,29 +185,29 @@
     <string name="item_icon">Item icon</string>
     
     <!-- list layout -->
-    <string name="scanning">Scanning…</string>
+    <string name="scanning">正在扫描…</string>
     
     <!-- Dialogs -->
-    <string name="delete_success">Successfully deleted</string>
-    <string name="delete_failure">Some files not deleted</string>
-    <string name="deleting">Deleting…</string>
-    <string name="rename_success">Successfully renamed</string>
-    <string name="rename_failure">Couldn\'t rename</string>
-    <string name="loading">Loading…</string>
+    <string name="delete_success">已成功删除</string>
+    <string name="delete_failure">部分文件未删除</string>
+    <string name="deleting">正在删除…</string>
+    <string name="rename_success">已成功重命名</string>
+    <string name="rename_failure">无法重命名</string>
+    <string name="loading">正在加载…</string>
     <string name="create_dir_success">Successfully created directory</string>
     <string name="create_dir_failure">Couldn\'t create directory</string>
-    <string name="compressed_file_name">Zip file name</string>
-    <string name="file_exists">File exists</string>
-    <string name="overwrite_question">Overwrite old file?</string>
+    <string name="compressed_file_name">压缩文件名字</string>
+    <string name="file_exists">文件已存在</string>
+    <string name="overwrite_question">覆盖原文件?</string>
     
     <string name="directory_pick">Select current directory</string>
     
     <!-- CopyHelper statuses -->
-    <string name="copying">Copying…</string>
-    <string name="copied">Successfully copied</string>
-    <string name="copy_error">Some or all items couldn\'t be copied!</string>
-    <string name="moving">Moving…</string>
-    <string name="moved">Successfully moved</string>
-    <string name="move_error">Some or all items couldn\'t be moved!</string>
-    <string name="nothing_to_paste">Nothing to paste. Copy or cut files first.</string>
+    <string name="copying">正在复制…</string>
+    <string name="copied">已成功复制</string>
+    <string name="copy_error">部分文件无法复制</string>
+    <string name="moving">正在移动…</string>
+    <string name="moved">已成功移动</string>
+    <string name="move_error">部分或全部文件无法移动</string>
+    <string name="nothing_to_paste">无可粘贴项，请先复制或者剪切 </string>
 </resources>
