--- a/FileManager/res/values-zh/strings.xml
+++ b/FileManager/res/values-zh/strings.xml
@@ -27,50 +27,50 @@
   zhangchun https://launchpad.net/~zhangchun</string>
 	
     <!-- Short explanation of the application (max. 80 characters) -->
-    <string name="about_comments">OI文件管理器用来管理SD卡上的文件。</string>  
+    <string name="about_comments">OI檔案管理員用來管理SD卡上的文件。</string>  
 	
 	<!-- ***************************
 	     Applicatio-specific strings
 	     *************************** -->
 	<!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
-    <string name="app_name">OI文件管理器</string>
+    <string name="app_name">OI檔案管理員</string>
     
-    <string name="menu_delete">删除</string>
+    <string name="menu_delete">刪除</string>
     <string name="menu_rename">重命名</string>
-    <string name="menu_send">发送</string>
-    <string name="menu_open">打开</string>
+    <string name="menu_send">發送</string>
+    <string name="menu_open">打開</string>
     <string name="menu_move">Cut</string>
-    <string name="menu_copy">复制</string>
-    <string name="menu_details">详细信息</string>
+    <string name="menu_copy">複製</string>
+    <string name="menu_details">詳細資訊</string>
     <string name="menu_more">更多</string>
-    <string name="menu_compress">压缩(ZIP)</string>
-    <string name="menu_extract">解压(ZIP)</string>
-    <string name="menu_include_in_media_scan">包括在媒体扫描中</string>
-    <string name="menu_exclude_from_media_scan">从媒体扫描中排除</string>
+    <string name="menu_compress">壓縮(ZIP)</string>
+    <string name="menu_extract">解壓(ZIP)</string>
+    <string name="menu_include_in_media_scan">包括在媒體掃描中</string>
+    <string name="menu_exclude_from_media_scan">從媒體掃描中排除</string>
     <string name="menu_bookmark">Bookmark</string>
     
-    <string name="create_new_folder">新建文件夹</string>
-    <string name="folder_name">文件夹名称</string>
-    <string name="this_folder_is_empty">该文件夹为空。</string>
-    <string name="really_delete">确实要删除 %s 吗？</string>
+    <string name="create_new_folder">新建資料夾</string>
+    <string name="folder_name">資料夾名稱</string>
+    <string name="this_folder_is_empty">該資料夾為空。</string>
+    <string name="really_delete">確實要刪除 %s 嗎？</string>
     <string name="title_warning_some_may_not_work">警告</string>
-    <string name="warning_some_may_not_work">下列选项中的某些可能不起作用。</string>
-    <string name="show_warning_again">再次显示警告</string>
+    <string name="warning_some_may_not_work">下列選項中的某些可能不起作用。</string>
+    <string name="show_warning_again">再次顯示警告</string>
     
     <!-- Strings for a multi select feature -->
-	<string name="really_delete_multiselect">确定要删除文件%d？</string>
+	<string name="really_delete_multiselect">確定要刪除檔%d？</string>
 
-    <string name="multiselect_title">选择多个文件</string>
+    <string name="multiselect_title">選擇多個檔</string>
     <string name="pick_title">File picker</string>
     
     <!-- Strings for details table -->
-    <string name="details_type">类型</string>
-    <string name="details_type_folder">文件夹</string>
+    <string name="details_type">類型</string>
+    <string name="details_type_folder">資料夾</string>
     <string name="details_type_file">文件</string>
     <string name="details_type_other">其他</string>
     <string name="details_size">大小</string>
-    <string name="details_permissions">权限</string>
-    <string name="details_hidden">隐藏</string>
+    <string name="details_permissions">許可權</string>
+    <string name="details_hidden">隱藏</string>
     <string name="details_lastmodified">最近修改</string>
     <string name="details_yes">是</string>
     <string name="details_no">否</string>
@@ -81,43 +81,43 @@
     <!-- Construct a unique file name with number %1$d of a file called %2$s. -->
     <string name="copied_file_name_2">%2$s的副本%1$d</string>
     
-    <string name="media_scan_included">该文件夹将包含在下次媒体扫描中。</string>
-    <string name="media_scan_excluded">该文件夹将从下次媒体扫描中排除。</string>
+    <string name="media_scan_included">該資料夾將包含在下次媒體掃描中。</string>
+    <string name="media_scan_excluded">該資料夾將從下次媒體掃描中排除。</string>
     
-    <string name="error_generic">出错：</string>
-    <string name="error_media_scan">无法更改媒体扫描设置。</string>
+    <string name="error_generic">出錯：</string>
+    <string name="error_media_scan">無法更改媒體掃描設置。</string>
     
-    <string name="send_not_available">无法找到用于发送的应用程序。</string>
+    <string name="send_not_available">無法找到用於發送的應用程式。</string>
     
-    <string name="application_not_available">应用程序不可用</string>
+    <string name="application_not_available">應用程式不可用</string>
     
 	<!-- ***************************
 	     Preferences
 	     *************************** -->
     <!-- Menu item for Settings -->
-	<string name="settings">设置</string>
+	<string name="settings">設置</string>
 	
     <!-- Category for preferences. -->
-    <string name="preference_advanced_features">高级功能</string>
-	<string name="preference_mediascan_title">从媒体扫描中排除</string>
-    <string name="preference_mediascan_summary_on">显示用于在媒体扫描中排除文件夹的菜单项。</string>
-    <string name="preference_mediascan_summary_off">隐藏用于在媒体扫描中排除文件夹的菜单项。</string>
+    <string name="preference_advanced_features">高級功能</string>
+	<string name="preference_mediascan_title">從媒體掃描中排除</string>
+    <string name="preference_mediascan_summary_on">顯示用於在媒體掃描中排除資料夾的功能表項目。</string>
+    <string name="preference_mediascan_summary_off">隱藏用於在媒體掃描中排除資料夾的功能表項目。</string>
     
-    <string name="preference_showallwarning_title">显示所有警告</string>
-    <string name="preference_showallwarning_summary_on">显示所有警告消息</string>
+    <string name="preference_showallwarning_title">顯示所有警告</string>
+    <string name="preference_showallwarning_summary_on">顯示所有警告消息</string>
     <string name="preference_showallwarning_summary_off">忽略警告消息</string>
        
-    <string name="preference_displayhiddenfiles_title">显示隐藏文件</string>
-    <string name="preference_displayhiddenfiles_summary_on">显示隐藏文件</string>
-    <string name="preference_displayhiddenfiles_summary_off">不显示隐藏文件</string>
+    <string name="preference_displayhiddenfiles_title">顯示隱藏檔</string>
+    <string name="preference_displayhiddenfiles_summary_on">顯示隱藏檔</string>
+    <string name="preference_displayhiddenfiles_summary_off">不顯示隱藏檔</string>
     
-    <string name="preference_sort_settings">排序设置</string>
+    <string name="preference_sort_settings">排序設置</string>
     <string name="preference_sortby">排序方式</string>
-    <string name="preference_sortby_ascending">升序</string>
-    <string name="preference_sortby_ascending_summary_on">按升序排序</string>
+    <string name="preference_sortby_ascending">昇冪</string>
+    <string name="preference_sortby_ascending_summary_on">按昇冪排序</string>
     <string name="preference_sortby_ascending_summary_off">按降充排序</string>
     <string-array name="preference_sortby_names">
-        <item>名称</item>
+        <item>名稱</item>
         <item>大小</item>
         <item>上次修改</item>
     </string-array>
@@ -126,58 +126,58 @@
     <!-- ***************************
    		 Strings for the \'Save as\' feature
     	 *************************** -->
-    <string name="saveas_no_file_picked">你没有选择任何文件。</string>
-    <string name="saveas_error">发生错误。</string>
-    <string name="saveas_file_saved">文件保存成功！</string>
+    <string name="saveas_no_file_picked">你沒有選擇任何檔。</string>
+    <string name="saveas_error">發生錯誤。</string>
+    <string name="saveas_file_saved">檔保存成功！</string>
     
     <!-- ***************************
              Strings for the \'Compressing\' and \'Extracting\' feature
           *************************** -->
-    <string name="compressing_success">项目压缩完成</string>
-    <string name="compressing_error">无法压缩该项目</string>
-    <string name="extracting_success">项目解压成功</string>
-    <string name="extracting_error">无法解压该项目</string>
-    <string name="extracting">Extracting…</string>
-    <string name="compressing">Compressing…</string>
+    <string name="compressing_success">項目壓縮完成</string>
+    <string name="compressing_error">無法壓縮該專案</string>
+    <string name="extracting_success">專案解壓成功</string>
+    <string name="extracting_error">無法解壓該項目</string>
+    <string name="extracting">正在解壓…</string>
+    <string name="compressing">正在壓縮…</string>
     
     <!-- new menu strings -->
-    <string name="menu_bookmarks">书签</string>
-    <string name="menu_search">Search</string>
-    <string name="menu_create_folder">创建文件夹</string>
-    <string name="menu_paste">粘贴</string>
-    <string name="menu_multiselect">多选</string>
-    <string name="menu_settings">设置</string>
+    <string name="menu_bookmarks">書簽</string>
+    <string name="menu_search">搜索</string>
+    <string name="menu_create_folder">創建新文件</string>
+    <string name="menu_paste">粘貼</string>
+    <string name="menu_multiselect">多選</string>
+    <string name="menu_settings">設置</string>
     
-    <string name="menu_send">发送</string>
-    <string name="menu_delete">删除</string>
-    <string name="menu_move">剪切</string>
-    <string name="menu_copy">复制</string>
+    <string name="menu_send">發送</string>
+    <string name="menu_delete">刪除</string>
+    <string name="menu_move">Cut</string>
+    <string name="menu_copy">複製</string>
     <string name="menu_compress">Compress</string>
     <string name="menu_rename">重命名</string>
     
-    <string name="menu_extract">Extract</string>
-    <string name="menu_details">详细信息</string>
-    <string name="menu_create_shortcut">Create shortcut</string>
-    <string name="send_chooser_title">Send using:</string>
+    <string name="menu_extract">解壓</string>
+    <string name="menu_details">詳細資訊</string>
+    <string name="menu_create_shortcut">創建快捷方式</string>
+    <string name="send_chooser_title">選擇使用:</string>
     
-    <string name="menu_check_all">Check all</string>
-    <string name="menu_uncheck_all">Uncheck all</string>
+    <string name="menu_check_all">全選</string>
+    <string name="menu_uncheck_all">全部不選</string>
     
     <!-- Multi selection action strings -->
-    <string name="selected">selected</string>
-    <string name="no_selection">No items checked</string>
+    <string name="selected">已選中</string>
+    <string name="no_selection">沒有選中項</string>
     
-    <string name="bookmark_empty">No bookmarks added.</string>
-    <string name="bookmark_added">书签已添加</string>
-    <string name="bookmark_already_exists">该文件已添加过书签。</string>
-    <string name="bookmarks">书签</string>
+    <string name="bookmark_empty">沒有添加的書簽</string>
+    <string name="bookmark_added">書簽已添加</string>
+    <string name="bookmark_already_exists">該檔已添加過書簽。</string>
+    <string name="bookmarks">書簽</string>
     
     <!-- Search related -->
-    <string name="search_hint">Search files</string>
-    <string name="query_error">Query error</string>
+    <string name="search_hint">搜索文件</string>
+    <string name="query_error">請求錯誤</string>
     <string name="search_settings_descr">Files and folders in storage</string>
-    <string name="preference_search_title">Clear history</string>
-    <string name="preference_search_category">Search</string>
+    <string name="preference_search_title">清除歷史記錄</string>
+    <string name="preference_search_category">搜索</string>
     <string name="preference_search_dialog_message">Clear search history?</string>
     <string name="search_history_cleared">Search history cleared</string>
     
@@ -185,29 +185,29 @@
     <string name="item_icon">Item icon</string>
     
     <!-- list layout -->
-    <string name="scanning">Scanning…</string>
+    <string name="scanning">正在掃描…</string>
     
     <!-- Dialogs -->
-    <string name="delete_success">Successfully deleted</string>
-    <string name="delete_failure">Some files not deleted</string>
-    <string name="deleting">Deleting…</string>
-    <string name="rename_success">Successfully renamed</string>
-    <string name="rename_failure">Couldn\'t rename</string>
-    <string name="loading">Loading…</string>
+    <string name="delete_success">已成功刪除</string>
+    <string name="delete_failure">部分檔未刪除</string>
+    <string name="deleting">正在刪除…</string>
+    <string name="rename_success">已成功重命名</string>
+    <string name="rename_failure">無法重命名</string>
+    <string name="loading">正在載入…</string>
     <string name="create_dir_success">Successfully created directory</string>
     <string name="create_dir_failure">Couldn\'t create directory</string>
-    <string name="compressed_file_name">Zip file name</string>
-    <string name="file_exists">File exists</string>
-    <string name="overwrite_question">Overwrite old file?</string>
+    <string name="compressed_file_name">壓縮檔名字</string>
+    <string name="file_exists">文件已存在</string>
+    <string name="overwrite_question">覆蓋原文件?</string>
     
     <string name="directory_pick">Select current directory</string>
     
     <!-- CopyHelper statuses -->
-    <string name="copying">Copying…</string>
-    <string name="copied">Successfully copied</string>
-    <string name="copy_error">Some or all items couldn\'t be copied!</string>
-    <string name="moving">Moving…</string>
-    <string name="moved">Successfully moved</string>
-    <string name="move_error">Some or all items couldn\'t be moved!</string>
-    <string name="nothing_to_paste">Nothing to paste. Copy or cut files first.</string>
+    <string name="copying">正在複製…</string>
+    <string name="copied">已成功複製</string>
+    <string name="copy_error">部分檔無法複製</string>
+    <string name="moving">正在移動…</string>
+    <string name="moved">已成功移動</string>
+    <string name="move_error">部分或全部檔無法移動</string>
+    <string name="nothing_to_paste">無可粘貼項，請先複製或者剪切 </string>
 </resources>
