--- a/FileManager/res/values/strings.xml
+++ b/FileManager/res/values/strings.xml
@@ -12,14 +12,17 @@
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
- * limitations under the License.
+ * limitations under the License.
+
+
 -->
 <resources>
 
     <!--
          ***************************
 	     About information
-	     ***************************
+	     ***************************
+
     -->
 
 
@@ -32,11 +35,21 @@
     <!--
          ***************************
 	     Applicatio-specific strings
-	     ***************************
+	     ***************************
+
     -->
     <!-- Name of application. Can be localized. OI = OpenIntents should stay unmodified. -->
+    <string name="app_name">OI File Manager</string>
+    <string name="menu_delete">Delete</string>
+    <string name="menu_rename">Rename</string>
+    <string name="menu_send">Send</string>
     <string name="menu_open">Open</string>
+    <string name="menu_move">Cut</string>
+    <string name="menu_copy">Copy</string>
+    <string name="menu_details">Details</string>
     <string name="menu_more">More</string>
+    <string name="menu_compress">Compress (ZIP)</string>
+    <string name="menu_extract">Extract (ZIP)</string>
     <string name="menu_include_in_media_scan">Include in media scan</string>
     <string name="menu_exclude_from_media_scan">Exclude from media scan</string>
     <string name="menu_bookmark">Bookmark</string>
@@ -80,7 +93,8 @@
     <!--
          ***************************
 	     Preferences
-	     ***************************
+	     ***************************
+
     -->
     <!-- Menu item for Settings -->
     <string name="settings">Settings</string>
@@ -116,7 +130,8 @@
     <!--
          ***************************
    		 Strings for the 'Save as' feature
-    	 ***************************
+    	 ***************************
+
     -->
     <string name="saveas_no_file_picked">You haven\'t picked any file.</string>
     <string name="saveas_error">An error occured.</string>
@@ -125,7 +140,8 @@
     <!--
          ***************************
              Strings for the 'Compressing' and 'Extracting' feature
-          ***************************
+          ***************************
+
     -->
     <string name="compressing_success">Item compressed successfully</string>
     <string name="compressing_error">Could not compress the item</string>
@@ -176,7 +192,7 @@
     <string name="item_icon">Item icon</string>
 
     <!-- list layout -->
-    <string name="file_scanning">Scanning&#8230;</string>
+    <string name="scanning">Scanning&#8230;</string>
 
     <!-- Dialogs -->
     <string name="delete_success">Successfully deleted</string>
