--- a/FileManager/res/values-ar/strings.xml
+++ b/FileManager/res/values-ar/strings.xml
@@ -185,7 +185,7 @@
     <string name="item_icon">Item icon</string>
     
     <!-- list layout -->
-    <string name="scanning">Scanning…</string>
+    <string name="file_scanning">Scanning&#8230;</string>
     
     <!-- Dialogs -->
     <string name="delete_success">Successfully deleted</string>
