--- a/FileManager/res/values-it/strings.xml
+++ b/FileManager/res/values-it/strings.xml
@@ -188,7 +188,7 @@
     <string name="item_icon">Item icon</string>
     
     <!-- list layout -->
-    <string name="scanning">Scanning…</string>
+    <string name="file_scanning">Scanning…</string>
     
     <!-- Dialogs -->
     <string name="delete_success">Successfully deleted</string>
