[mod] Filemanager :1.minType crash fix  2.search use no db 3.move search button from menu to actionBar 4.Filemanager actionBar back  logic change  [add] ImoblifeLibrary: add event bus jar  [mod] Toolbox: add listener for search action callback

--- a/FileManager/res/values/strings.xml
+++ b/FileManager/res/values/strings.xml
@@ -182,4 +182,8 @@
     <string name="file_sort_by_name">Sort by file name</string>
     <string name="file_sort_by_time">Sort by file date</string>
     <string name="file_sort_by_default">Sort by default</string>
+
+    <!--5.2.0 file search dialog text-->
+    <string name="file_search_message">processing</string>
+    <string name="file_search_no_result">(No matching results found)</string>
 </resources>
