[mod] 文件管理器 功能完成

--- a/FileManager/res/values/strings.xml
+++ b/FileManager/res/values/strings.xml
@@ -187,4 +187,10 @@
     <!--5.2.0 file search dialog text-->
     <string name="file_search_message">Searching...</string>
     <string name="file_search_no_result">(No matching result found)</string>
+
+    <!--storage analysis text-->
+    <string name="storage_analysis_delete">delete</string>
+    <string name="storage_analysis_avail_size">Avail：%s</string>
+    <string name="storage_analysis_total_size">/Total：%s</string>
+
 </resources>
