[mod] 文件占有文件扫描数量展示

--- a/FileManager/res/values/strings.xml
+++ b/FileManager/res/values/strings.xml
@@ -192,5 +192,6 @@
     <string name="storage_analysis_delete">delete</string>
     <string name="storage_analysis_avail_size">Avail：%s</string>
     <string name="storage_analysis_total_size">/Total：%s</string>
+    <string name="storage_analysis_scan_count">Scanning： %s items...</string>
 
 </resources>
