--- a/FileManager/res/values-zh-rTW/strings.xml
+++ b/FileManager/res/values-zh-rTW/strings.xml
@@ -194,5 +194,10 @@
     <!--5.2.0 file search dialog text-->
     <string name="file_search_message">搜索中......</string>
     <string name="file_search_no_result">(沒有找到與搜索內容匹配的檔)</string>
+   <!--storage analysis text-->
+    <string name="storage_analysis_delete">刪除</string>
+    <string name="storage_analysis_avail_size">可用：%s</string>
+    <string name="storage_analysis_total_size">/總計：%s</string>
+    <string name="storage_analysis_scan_count">掃描中： %s 项...</string>
 
 </resources>
