--- a/FileManager/res/values/strings.xml
+++ b/FileManager/res/values/strings.xml
@@ -200,4 +200,5 @@
     <string name="file_dialog_operation_copy_button">COPY</string>
     <string name="file_dialog_operation_move_button">MOVE</string>
     <string name="file_dialog_operation_in_progress">In Progress</string>
+    <string name="file_dialog_select_sdcard">SDCard</string>
 </resources>
